--- a/Disease_Prediction.ipynb
+++ b/Disease_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+OMqZAVnmaVkB6FUrNX1h",
+      "authorship_tag": "ABX9TyPhnac3C8fZF1CV1FTOfJBu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "8b8vAgufzMAs"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,12 +91,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 486
+          "height": 610
         },
         "id": "W_1-UxUgzSTZ",
-        "outputId": "358df832-7078-4b3e-d20e-ed224383ffc7"
+        "outputId": "032d9c52-8a65-4bbe-fb06-e37ec3413972"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "krI6ndp4zqVZ"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -149,9 +149,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WeVBWyZ3z0AY",
-        "outputId": "09389fc0-ccc0-4519-e779-886473750e38"
+        "outputId": "0f5c29ac-794e-418b-e384-712b9b252d7b"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s8S7jYzF0DPB",
-        "outputId": "a3183442-6625-41b3-fa30-ef4ef1dcc734"
+        "outputId": "01fa84c9-05de-48f9-9ea0-7194e0798ff3"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,9 +315,9 @@
           "height": 1000
         },
         "id": "psRaaxRw0a2K",
-        "outputId": "7600af68-c29f-4833-c8e2-d208f17d4980"
+        "outputId": "10c6044c-f672-423c-f321-819f97fc599f"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,12 +425,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 647
+          "height": 751
         },
         "id": "G67l1SjF0xQg",
-        "outputId": "8157a8ac-f7ee-4460-baf7-207707f9bae8"
+        "outputId": "518ac8dc-7b7c-49d5-c8d9-b6cc541e520a"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,9 +520,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IEf8qm_c1zeO",
-        "outputId": "d944d31e-a5b2-4e5f-f666-96e1e1b57cc4"
+        "outputId": "b882a451-4e89-450e-e5f6-be7162642057"
       },
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,6 +541,39 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
             "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "import pickle\n",
+        "\n",
+        "rf_model = RandomForestClassifier(random_state=18)\n",
+        "rf_model.fit(X_train, y_train)  # Train the model\n",
+        "\n",
+        "# Save the trained model\n",
+        "with open(\"model.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(rf_model, f)\n",
+        "\n",
+        "print(\"Model saved successfully as model.pkl\")\n"
+      ],
+      "metadata": {
+        "id": "xWlltviBR_P4",
+        "outputId": "04fc606e-e00d-4b48-8a89-421822c6c4f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model saved successfully as model.pkl\n"
           ]
         }
       ]
